<resources>
    <string name="app_name">Tarea04</string>

    <!--Cadenas para layout add_task-->
    <string name="add_task_title">Nueva Tarea</string>
    <string name="name">Nombre</string>
    <string name="description">Descripción</string>
    <string name="date_format">dd/mm/yyy</string>
    <string name="time_format">hh:mm</string>
    <string name="high_priority">Prioridad alta</string>
    <string name="add_task">Agregar tarea</string>

    <!--Cadenas para layout add_task-->
    <string name="edit">Editar</string>
    <string name="completed">Completado</string>
    <string name="confirm">Confirmar cambios</string>
    <string name="see_details">Ver Detalles</string>
    <string name="get_back">Regresar</string>

    <string name="ord_fecha">Ordenar por Fecha</string>
    <string name="ord_materia">Ordenar por Materia</string>
    <string name="prior_menu">Mostrar Prioritarios</string>

    <string name="DrawerOpened">NavigationDrawerOpened</string>
    <string name="DrawerClosed">NavigationDrawerClosed</string>
    <string name="edit_task">Editar</string>
    v
    <string-array name="menu_items">
        <item>Agregar Tarea</item>
        <item>Eliminar Tarea</item>
        <item>Mostrar Completados</item>
    </string-array>
</resources>